--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
@@ -17,6 +18,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
